# ej49_poo

./: main.py  pyproject.toml
src/: User.py
src/ej49/: Gamin_exception.py  User.py
tests/: test_usuario.py
